# ptt_analysis

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
notebooks/: notebook_setup.py
scripts/: crawl_party_data.py
src/: crawl_party_data.py  ptt_crawler.py
src/config/: config.py  headers.json  logging_config.py
src/pipeline/: anonymiser.py  ptt_crawler.py  tokeniser.py
src/ptt_crawler/: __init__.py  anonymiser.py  crawler.py  tokeniser.py
src/ptt_crawler/config/: __init__.py  chinese_puncts.json  config.py  logging_config.yaml
test/: __init__.py
test/test_pipeline/: test_anonymiser.py  test_ptt_crawler.py  test_tokeniser.py
test/test_pipeline/mock_html/: mock_ptt_page.html
