[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ptt-analysis"
version = "0.1.0"
description = "Sentiment analysis of PTT forumn."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    { name = "David Huang", email = "dh.fwc18@gmail.com" }
]
dependencies = [
    "requests>=2.28.0",
    "python-dotenv>=0.19.0",
    "pyarrow>=10.0.0",
    "polars>=0.18.0",
    "pandas>=1.5.0",
    "fastexcel>=0.11.0",
    "beautifulsoup4>=4.11.0",
    "regex>=2022.7.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=5.0",
    "mypy>=0.991",
]
notebooks = [
    "jupyter>=1.0.0",
    "jupyterlab>=3.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    "ipywidgets>=8.0.0",
]
analysis = [
    "scikit-learn>=1.1.0",
    "scipy>=1.9.0",
    "numpy>=1.23.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]